--- a/apps/MeuSalario/app/src/main/res/layout/activity_main.xml
+++ b/apps/MeuSalario/app/src/main/res/layout/activity_main.xml
@@ -91,4 +91,12 @@
         android:layout_above="@+id/imageButton2"
         android:layout_alignStart="@+id/imageButton2" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/logos" />
+
 </RelativeLayout>
